--- a/packages/react-design-shield-client/package.json
+++ b/packages/react-design-shield-client/package.json
@@ -10,9 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@urql/exchange-persisted": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "ts-morph": "^19.0.0"
+    "urql": "^4.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
