--- a/packages/react-design-shield-server/package.json
+++ b/packages/react-design-shield-server/package.json
@@ -6,14 +6,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --watch src --ext ts,tsx --exec \"node --experimental-specifier-resolution=node --loader ts-node/esm src/serve.ts\""
+    "dev": "nodemon --watch src --ext ts,tsx --exec \"node --experimental-specifier-resolution=node --loader ./loader.js src/serve.ts\""
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "nodemon": "^2.0.22",
     "ts-morph": "^19.0.0",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0"
   },
   "dependencies": {
     "apollo-server-express": "^3.12.0",
